# meraki-agentic-iot-triage-openrouter

./: .env.example  .gitignore  README.md  demo_runner.py  mcp_stub.py  pyproject.toml  server.py
deploy/: 01_bootstrap.sh  02_update.sh
deploy/systemd/: mcp_stub.service  server.service
src/: __init__.py  agent.py  chaos.py  meraki_client.py
