[project]
name = "icp-meraki-iot-triage"
version = "0.1.0"
description = "Meraki IoT triage agent — OpenRouter multi-model pipeline"
requires-python = ">=3.11"

dependencies = [
    # LangGraph + agent tooling
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    # HTTP / async
    "httpx>=0.27",
    # Config + util
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "rich>=13",
    # Dashboard server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    # MCP stub
    "fastmcp>=0.9",
    "slack-sdk>=3.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
